button mobile view fix

--- a/layout/source/sass/blocks/_forms.sass
+++ b/layout/source/sass/blocks/_forms.sass
@@ -107,12 +107,12 @@ form
 
 
 .button
+	@extend %unselectable
 	margin: 0 10px
 	display: inline-block
 	text-decoration: none
 	font-size: 14px
 	font-weight: 700
-	line-height: 1em
 	letter-spacing: 0.2em
 	text-transform: uppercase
 	color: #161a1b
@@ -139,4 +139,6 @@ form
 		max-width: 50%
 	+max-screen(768)
 		width: 100%
+		max-width: none
+		
 
